# Invest_Django

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
core/: settings.py  urls.py
empresarios/: models.py  urls.py  views.py
empresarios/migrations/: 0001_initial.py  0002_documento.py  0003_metricas.py
empresarios/templates/: cadastrar_empresa.html  empresa.html  listar_empresas.html
investidores/: views.py
templates/static/geral/css/: base.css
templates/static/usuarios/css/: usuarios.css
usuarios/: urls.py  views.py
usuarios/templates/: cadastro.html  logar.html
